# const_string

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/const_string/: const_string.h
include/const_string/detail/: allocation.h  ref_cnt_buf.h  ref_cnt_buf2.h  tree.h
tests/: CMakeLists.txt  benchmark_split.cpp  main.cpp  test_allocation.cpp  test_ref_cnt_buf2.cpp  test_split.cpp  test_substr.cpp  test_tree.cpp  tests.cpp
